quelques corrections ajouter sur du padding et des align items

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -23,4 +23,4 @@ $dark-pink: #97266D;
 
 //tag termine:
 $light-purple: #E9D8FD;
-$dark-purple: #6A7FDB;
+$dark-purple: #44337A;
